--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,17 @@
 trigger:
 - master
 
-pool:
-  vmImage: ubuntu-latest
+# pool:
+#   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+  - stage: "Secret Scan"
+    jobs:
+    - job: GitGuardianShield
+      pool:
+        vmImage: 'ubuntu-latest'
+      container: gitguardian/ggshield:latest
+      steps:
+      - script: ggshield scan ci
+        env:
+          GITGUARDIAN_API_KEY: $(gitguardianApiKey)
