Update azure-pipelines.yml with Git secret scan

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,8 @@ trigger:
 #   vmImage: ubuntu-latest
 
 stages:
-  - stage: "Secret Scan"
+  - stage: SecretScan
+    displayName: Git Secret Name
     jobs:
     - job: GitGuardianShield
       pool:
