Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -23,4 +23,20 @@ steps:
 - script: echo $(paravalue)
 - script: echo $(buildnumber)
   displayName: 'Run a one-line script'
+- task: replacetokens@5
+  inputs:
+    rootDirectory: '$(Build.SourcesDirectory)'
+    targetFiles: '**/replace-vars.yaml'
+    encoding: 'auto'
+    tokenPattern: 'custom'
+    tokenPrefix: '~{'
+    tokenSuffix: '}~'
+    writeBOM: true
+    actionOnMissing: 'warn'
+    keepToken: false
+    actionOnNoFiles: 'continue'
+    enableTransforms: false
+    enableRecursion: false
+    useLegacyPattern: false
+    enableTelemetry: true
 
