Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -42,3 +42,11 @@ steps:
 
 - script: cat '$(Build.SourcesDirectory)'/replace-vars.yaml
 
+- task: Gitleaks@2
+  inputs:
+    scanlocation: '$(Build.SourcesDirectory)'
+    configtype: 'predefined'
+    predefinedconfigfile: 'UDMSecretChecksv8.toml'
+    reportformat: 'sarif'
+
+
