Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -47,6 +47,7 @@ steps:
     scanlocation: '$(Build.SourcesDirectory)'
     configtype: 'predefined'
     predefinedconfigfile: 'UDMSecretChecksv8.toml'
+    scanmode: 'nogit'
     reportformat: 'sarif'
 
 
